--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 inventory = ./hosts
 
 # customise the user for your own use-case or override in group_vars
-remote_user = kiosk
+remote_user = student
 
 ask_pass = no
 host_key_checking = no
