Back network to NAT sheme. Looks ok up to mco-bootstrap

--- a/01-configure-vm-services.yml
+++ b/01-configure-vm-services.yml
@@ -23,6 +23,7 @@
           - java-1.8.0-openjdk
           - java-1.8.0-openjdk-headless
           - nfs-utils
+          - python3
         state: latest
 
     # some certificate management stuff
