--- a/17-disable-telemetry.yml
+++ b/17-disable-telemetry.yml
@@ -19,6 +19,7 @@
                 enabled: false
 
     - name: apply the cluster monitoring configmap
+      delegate_to: localhost
       command: >
         {{ oc_bin }} --kubeconfig={{ openshift_rtdata_path }}/auth/kubeconfig
         -n openshift-monitoring apply -f /tmp/cm-monitoring-optout.yml
