--- a/group_vars/rhel.yml
+++ b/group_vars/rhel.yml
@@ -3,8 +3,8 @@
 # you want to put here is the RHSM credentials for subscription-manager.
 #
 # The password is expected to be plaintext, but feel free to use Ansible Vault.
-rhel_sub_user: ran000
-rhel_sub_pass: Iehbr00)
+rhel_sub_user: account
+rhel_sub_pass: secret
 
 # If you have a very uniform RHEL system structure (or if it's only the
 # services VM you are touching), you can set some additional vars here as well,
