First AIO deployment for testing

--- a/16-provision-cluster-storage.yml
+++ b/16-provision-cluster-storage.yml
@@ -39,5 +39,12 @@
         patch configs.imageregistry.operator.openshift.io cluster --type=merge
         -p '{ "spec": { "storage": { "pvc": { "claim": "" } } } }'
       when: (regstate.stdout | regex_search('^map\\[\\]'))
-# todo Removed => Managed !!!!!!!!!!!!!!!!!!!
+
+    - name: now fix the operator config to be Managed
+      delegate_to: localhost
+      command: >
+        {{ oc_bin }} --kubeconfig={{ openshift_rtdata_path }}/auth/kubeconfig
+        patch configs.imageregistry.operator.openshift.io cluster --type=merge
+        -p '{"spec":{"managementState":"Managed"}}'
+      when: (regstate.stdout | regex_search('^map\\[\\]'))
 ...
