--- a/site.yml
+++ b/site.yml
@@ -7,9 +7,9 @@
     - services_vm
 - import_playbook: 10-conf-generate-ignition.yml
 - import_playbook: 11-provision-vm-bootstrap.yml
+- import_playbook: 14-provision-vm-workers.yml
 - import_playbook: 12-provision-vm-master.yml
 - import_playbook: 13-get-rid-of-bootstrap-vm.yml
-- import_playbook: 155-override-deployment-for-one-replica.yml
 - import_playbook: 16-provision-cluster-storage.yml
 - import_playbook: 17-disable-telemetry.yml
 ...
