--- a/950-start-cluster.yml
+++ b/950-start-cluster.yml
@@ -3,29 +3,10 @@
   hosts: hypervisors
   become: yes
   gather_facts: no
-#  vars:
-#    current_vm_name: master0
   tasks:
     - name: set some facts that describe the vm
       set_fact:
-#        current_vm_hostname: "{{ vms[current_vm_name].hostname }}"
-#        current_vm_mac: "{{ vms[current_vm_name].mac }}"
-#        current_vm_ipaddr: "{{ vms[current_vm_name].ipaddr }}"
-#        current_vm_netmask: "{{ vms[current_vm_name].netmask | default(vms.global.netmask) }}"
-#        current_vm_dns: "{{ vms[current_vm_name].dns | default(vms.global.dns) }}"
-#        current_vm_gw: "{{ vms[current_vm_name].gw | default(vms.global.gw) }}"
-#        current_vm_tz: "{{ vms[current_vm_name].tz | default(vms.global.tz) }}"
-#        current_vm_mem_gb: "{{ vms[current_vm_name].mem_gb | default(vms.global.mem_gb) }}"
-#        current_vm_ncpus: "{{ vms[current_vm_name].ncpus | default(vms.global.ncpus) }}"
-        
         clustervms: "{{ groups['ocp_masters'] }}"
-#    - debug:
-#        var: clustervms
-#    - debug:
-#        msg: "{{ item }}"
-#      loop: "{{ clustervms | list }}"
- 
-         
 
     - name: do the final boot (or at least make sure it's up)
       virt:
@@ -35,19 +16,19 @@
       loop: "{{ clustervms | list }}"
 
     - name: Pause for 5 minutes.
-      pause:
-        minutes: 5
+      delegate_to: localhost
+      wait_for:
+        timeout: 300
     - name: wait for vm to finish booting
       delegate_to: localhost
       become: no
       shell:
-        cmd:  'KUBECONFIG=/home/student/ocp4-lab-deployment/cluster/auth/kubeconfig ; oc whoami'
-      ignore_errors: true
+        cmd:  'KUBECONFIG=/home/student/ocp4-lab-deployment/cluster/auth/kubeconfig ; oc get clusterversion'
       register: cmd_res
       retries: 20
       delay: 30
-      until: '"system.admin" not in cmd_res.stdout_lines'  
-
+      ignore_errors: true
+      until: '"version" in cmd_res.stdout'  
 
     - name: report all is well and the world continues
       debug:
