--- a/01-configure-vm-services.yml
+++ b/01-configure-vm-services.yml
@@ -23,9 +23,8 @@
           - java-1.8.0-openjdk
           - java-1.8.0-openjdk-headless
           - nfs-utils
-          - python3
+            #          - python3
         state: latest
-
     # some certificate management stuff
     - name: create a directory for cert stuff
       file:
