--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -13,19 +13,19 @@ openshift_installer_path: "{{ binary_artifact_path }}/openshift-install"
 oc_bin: "{{ binary_artifact_path }}/oc"
 #  - the RHEL ISO image to use (all expected in binary_artifact_path)
 rhel8_artifacts:
-  - rhel-8.0-x86_64-dvd.iso
+  - rhel-8.2-x86_64-dvd.iso
 #  - the RHEL CoreOS release and artifacts (same, binary_artifact_path)
-coreos_release: 4.5.6-x86_64
+coreos_release: 4.6.1-x86_64
 coreos_http_artifacts:
-  - rhcos-{{ coreos_release }}-metal.raw.gz
+  - rhcos-{{ coreos_release }}-live-rootfs.x86_64.img
 coreos_tftp_artifacts:
-  - rhcos-{{ coreos_release }}-installer-kernel
-  - rhcos-{{ coreos_release }}-installer-initramfs.img
+  - rhcos-{{ coreos_release }}-live-kernel.x86_64
+  - rhcos-{{ coreos_release }}-live-initramfs.x86_64.img
 
 # Other package versions - these are also expected in binary_artifact_path.
 # OpenVPN and PKCS11 helper are optional, skip with --skip-tags=openvpn
 # (both are from https://epel.ip-connect.info/8/Everything/x86_64/Packages/)
-nexus_release: 3.26.1-02
+nexus_release: 3.28.1-01
 openvpn_release: 2.4.7-1
 pkcs11_release: 1.22-7
 
@@ -174,12 +174,12 @@ vms:
     hostname: master1.{{ cluster_name }}.{{ parent_domain }}
     mac: "{{ mac_prefix }}:16"
     ipaddr: "{{ ip_prefix }}.22"
-    mem_gb: 16
+    mem_gb: 8
   master2:
     hostname: master2.{{ cluster_name }}.{{ parent_domain }}
     mac: "{{ mac_prefix }}:17"
     ipaddr: "{{ ip_prefix }}.23"
-    mem_gb: 16
+    mem_gb: 8
   worker0:
     hostname: worker0.{{ cluster_name }}.{{ parent_domain }}
     mac: "{{ mac_prefix }}:1f"
