--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -13,13 +13,13 @@ openshift_installer_path: "{{ binary_artifact_path }}/openshift-install"
 oc_bin: "{{ binary_artifact_path }}/oc"
 #  - the RHEL ISO image to use (all expected in binary_artifact_path)
 rhel8_artifacts:
-  - rhel-8.2-x86_64-dvd.iso
+  - rhel-8.3-x86_64-dvd.iso
 #  - the RHEL CoreOS release and artifacts (same, binary_artifact_path)
-coreos_release: 4.6.1-x86_64
+coreos_release: 4.6.8-x86_64
 coreos_http_artifacts:
   - rhcos-{{ coreos_release }}-live-rootfs.x86_64.img
 coreos_tftp_artifacts:
-  - rhcos-{{ coreos_release }}-live-kernel.x86_64
+  - rhcos-{{ coreos_release }}-live-kernel-x86_64
   - rhcos-{{ coreos_release }}-live-initramfs.x86_64.img
 
 # Other package versions - these are also expected in binary_artifact_path.
